k8s/service2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-new
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 8080 # порт контейнера
  selector:
    app: service-new
