k8s/service2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-new
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/service2/
            pathType: "Prefix"
            backend:
              service:
                name: service-new
                port:
                  number: 80
